Use bearer token in security
